[project]
name = "oreilly-2026-02february-pandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitautopush>=0.4.1",
    "ipyparallel>=9.0.2",
    "ipython>=9.10.0",
    "jupyter>=1.1.1",
    "loro>=1.10.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "pyarrow>=23.0.0",
    "xlrd>=2.0.2",
]
